
AM_CPPFLAGS= -D_MSC_VER

noinst_LTLIBRARIES = libfoma.la
nodist_libfoma_la_SOURCES = int_stack.c define.c determinize.c apply.c \
	rewrite.c lexcread.c topsort.c flags.c minimize.c reverse.c \
	extract.c sigma.c io.c structures.c constructions.c \
	coaccessible.c utf8.c spelling.c dynarray.o mem.c stringhash.c \
	trie.c lex.lexc.c lex.yy.c lex.cmatrix.c regex.tab.c
